# focus-gaze

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  IMPLEMENTATION.md  README.md
design/: README.md
design/stitch/: alarm.html  dashboard.html  dashboard.meta.json  install.html  onboarding.html  onboarding_permissions.html  popup.html  popup.meta.json  settings.html  stats.html  stats.meta.json  stats_minimal.html
design/stitch/logo/: logo.html
extension/chrome/: README.md  background.js  manifest.json  popup.css  popup.html  popup.js
extension/keys/: extension_id.txt
models/: README.md
resources/: AppIcon.icns  Info.plist.in  sample_blocklist.txt
scripts/: chrome_extension_installer.py  export_yolo11n.py  generate_extension_key.sh  install_chrome_extension.sh  package_macos_dmg.sh  sign_and_notarize.md  sync_blocklist.py
src/adapters/macos/: LoginItem.cpp  PlatformPaths.cpp  PlatformSessionState.cpp
src/adapters/windows/: LoginItem.cpp  PlatformPaths.cpp  PlatformSessionState.cpp
src/app/: main.cpp  native_messaging_host_main.cpp
src/bridge/: HttpBrowserBridge.cpp  HttpBrowserBridge.hpp
src/core/: AlarmController.cpp  AlarmController.hpp  AlarmPresenter.cpp  AlarmPresenter.hpp  BrowserMonitor.cpp  BrowserMonitor.hpp  DefaultBlocklist.cpp  DefaultBlocklist.hpp  FileSystem.cpp  FileSystem.hpp  FocusSession.cpp  FocusSession.hpp  LoginItem.hpp  NativeMessaging.cpp  NativeMessaging.hpp  PhoneMonitor.cpp  PhoneMonitor.hpp  PhonePresenceTracker.cpp  PhonePresenceTracker.hpp  PlatformPaths.hpp  PlatformSessionState.hpp  ProductivityStats.cpp  ProductivityStats.hpp  Settings.cpp  Settings.hpp  Storage.cpp  Storage.hpp  Types.hpp  UrlClassifier.cpp  UrlClassifier.hpp
src/ui/: CameraWindow.cpp  CameraWindow.hpp  ChromeExtensionInstaller.cpp  ChromeExtensionInstaller.hpp  DashboardWindow.cpp  DashboardWindow.hpp  OnboardingWizard.cpp  OnboardingWizard.hpp  StatsViewModel.cpp  StatsViewModel.hpp  TrayController.cpp  TrayController.hpp  main_gui.cpp
src/vision/: CameraPreview.cpp  CameraPreview.hpp  CameraSource.cpp  CameraSource.hpp  VisionLoop.cpp  VisionLoop.hpp  YoloDetector.cpp  YoloDetector.hpp
testdata/ui/: stats_snapshot_golden.txt
tests/: test_alarm_controller.cpp  test_blocklist_file.cpp  test_browser_monitor.cpp  test_camera_source.cpp  test_chrome_extension_installer.py  test_focus_segments.cpp  test_focus_session.cpp  test_helpers.hpp  test_http_bridge.cpp  test_native_messaging.cpp  test_phone_monitor.cpp  test_phone_presence.cpp  test_platform_paths.cpp  test_productivity_stats.cpp  test_settings.cpp  test_stats_view_model.cpp  test_storage.cpp  test_url_classifier.cpp  test_yolo_detector.cpp
